--- a/22 - Recreating Codepen/style-START.css
+++ b/22 - Recreating Codepen/style-START.css
@@ -28,3 +28,18 @@ h6 {
   font-size: 1.5em;
 }
 
+.codepen {
+  display: grid;
+  grid-template-rows: auto 1fr 1fr auto;
+  height: 100vh;
+}
+
+.codepen >* {
+  border: 1px solid black;
+}
+
+.code {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
