--- a/22 - Recreating Codepen/style-START.css
+++ b/22 - Recreating Codepen/style-START.css
@@ -43,3 +43,11 @@ h6 {
   grid-template-columns: repeat(3, 1fr);
 }
 
+.pen {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-auto-flow: column;
+  align-items: center;
+  grid-gap: 10px;
+}
+
